<resources>
    <string name="app_name">FirebaseApp</string>
    <string name="submit">SUBMIT</string>
    <string name="enter_username">ENTER USERNAME</string>
    <string name="enter_password">ENTER PASSWORD</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="logout">LOGOUT</string>
    <string name="welcome_to_firebase_app">WELCOME TO FIREBASE APP</string>
    <string name="firebase_app">FIREBASE APP</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="contact_number">Contact Number</string>
    <string name="title_activity_maps">Map</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="logout2">Logout</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="update">Update</string>
    <string name="back">Back</string>
    <string name="details">Details</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="pincode">Pincode</string>
    <string name="edit">Edit</string>
    <string name="todo">TODO</string>
</resources>
