<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/crop"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/l1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/sigmar_one"
        android:text="@string/register"
        android:textColor="#eb4034"
        android:textSize="40sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:cardBackgroundColor="@color/cardColor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/loginicon"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/todo" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:hint="@string/email"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:inputType="textEmailAddress"
                android:textSize="20sp"


                app:met_singleLineEllipsis="true"
                app:met_baseColor="@color/colorPrimary"
                app:met_primaryColor="@color/colorPrimary"
                app:met_floatingLabel="highlight"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:hint="@string/password"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:inputType="textPassword"
                android:textSize="20sp"


                app:met_singleLineEllipsis="true"
                app:met_baseColor="@color/colorPrimary"
                app:met_primaryColor="@color/colorPrimary"
                app:met_floatingLabel="highlight"/>

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:background="@drawable/customloginbtn"
                android:textColor="#ffffff"
                android:layout_gravity="center_horizontal"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>